<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InicioCV">

    <!--
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:id="@+id/linearLayoutCompat" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_menu_50"
                android:id="@+id/ic_baseline_menu_50">
        </ImageButton>
    </LinearLayout>
-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <ImageButton
                android:gravity="right"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_back_50"
                android:id="@+id/ic_baseline_arrow_back_50" android:onClick="irMain"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="@string/curriculum_vitae"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/curriculum_vitae"/>

    </LinearLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginVertical="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" android:id="@+id/tableLayout"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_gravity="center">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imgPersona" android:layout_weight="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/datos_personales"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:id="@+id/datos_personales" android:layout_weight="2"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/nombres_apellidos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/nombres_apellidos" android:layout_weight="1"/>
            <TextView
                    android:text="@string/nombres_apellidos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_nombres_apellidos"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/fecha_nacimiento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/fecha_nacimiento" android:layout_weight="1"/>
            <TextView
                    android:text="@string/fecha_nacimiento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_fecha_nacimiento"
                    android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/cedula_ciudadania"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/cedula_ciudadania" android:layout_weight="1"/>
            <TextView
                    android:text="@string/cedula_ciudadania"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_cedula_ciudadania"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/direccion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/direccion" android:layout_weight="1"/>
            <TextView
                    android:text="@string/direccion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_direccion" android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/telefono" android:layout_weight="1"/>
            <TextView
                    android:text="@string/telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_telefono" android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/logros"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:id="@+id/logros" android:layout_weight="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/logros_nombres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/logros_nombres" android:layout_weight="1"/>
            <TextView
                    android:text="@string/logros_nombres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_logros_nombres"
                    android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/experencia_laboral"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView24" android:layout_weight="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/experencia_laboral_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/experencia_laboral_nombre"
                    android:layout_weight="1"/>
            <TextView
                    android:text="@string/experencia_laboral_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_experencia_laboral_nombre"
                    android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/referencias_personales"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/referencias_personales"
                    android:layout_weight="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/referencias_personales_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/referencias_personales_nombre"
                    android:layout_weight="1"/>
            <TextView
                    android:text="@string/referencias_personales_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_referencias_personales_nombre"
                    android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/capacitaciones"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/capacitaciones" android:layout_weight="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/capacitaciones_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/capacitaciones_nombre"
                    android:layout_weight="1"/>
            <TextView
                    android:text="@string/capacitaciones_nombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/txt_capacitaciones_nombre"
                    android:layout_weight="1"/>
        </TableRow>


    </TableLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout">
        <TextView
                android:text="@string/mensaje_informativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mensaje_informativo"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>