<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.employe.InicioCV">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <ImageButton
                android:gravity="right"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_back_50"
                android:id="@+id/btn_regresar_pefil_empresa_cv"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="@string/curriculum_vitae"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/curriculum_vitae"/>

    </LinearLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginVertical="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" android:id="@+id/tableLayout"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/datos_personales"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:id="@+id/datos_personales" android:layout_weight="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_gravity="center">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imgPersona" android:layout_weight="2"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_ID"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_username"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/nombres_apellidos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_nombres_apellidos"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/fecha_nacimiento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"  android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_fecha_nacimiento"
                    android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/cedula_ciudadania"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"  android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_cedula_ciudadania"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/direccion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_direccion" android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/telefono" android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_telefono" android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/estado_civil"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/logros_nombres" android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_cv_estado_civil"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/rol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_cv_rol"
                    android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/genero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/experencia_laboral_nombre"
                    android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_genero"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/correo_electronico"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_correo"
                    android:layout_weight="1"/>
        </TableRow>


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/ciudad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/referencias_personales_nombre"
                    android:layout_weight="1"/>
            <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/view_cv_ciudad"
                    android:layout_weight="1"/>
        </TableRow>


    </TableLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            tools:ignore="MissingConstraints"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout">
        <Button
                android:id="@+id/btn_activar"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="ACTIVAR"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeWidth="2dp"
                app:strokeColor="@color/material_on_background_emphasis_high_type"
                android:textColor="@color/material_on_background_emphasis_high_type"
        />

        <Button
                android:id="@+id/btn_desactivar"
                android:enabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:text="DESACTIVAR"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeWidth="2dp"
                app:strokeColor="@color/material_on_background_emphasis_high_type"
                android:textColor="@color/material_on_background_emphasis_high_type"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>