<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/id"/>
            <TextView
                    android:id="@+id/view_rs_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/empresa"/>
            <TextView
                    android:id="@+id/view_rs_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>

        <!--
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/razon_social"/>
            <TextView
                    android:id="@+id/view_rs_razon_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
-->

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/salario"/>
            <TextView
                    android:id="@+id/view_rs_salario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cargo"/>
            <TextView
                    android:id="@+id/view_rs_cargo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion"/>
            <TextView
                    android:id="@+id/view_rs_ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>



        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center">
            <Button
                    android:id="@+id/btn_ver_mas"
                    android:text="@string/ver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>